--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.0.7",
+    "gray-matter": "^4.0.3",
+    "next": "^15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.3"
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1"
   }
 }
