--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^6.13.1",
     "next": "^15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
